# camera-control

./: .gitignore  CMakeLists.txt
include/: send_img.h
src/: frame-test.cpp  main.cpp  prop-test.cpp
